--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,11 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.DriverDetails.TC001_Get_List_Users</td>
+<td>com.NotificationDetails.TC001_Get_Notification_Users</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>put_New_Users</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>post_New_Users</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>getList_Users</td>
