--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c273d3">  <td>20/05/20 17:01:46</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TC001_Get_List_Users.endReport()[pri:0, instance:com.DriverDetails.TC001_Get_List_Users@6ee52dcd]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@140799417</td>   <td></td> </tr>
-<tr bgcolor="c273d3">  <td>20/05/20 17:01:41</td>   <td>-5943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Get_List_Users.getList_Users()[pri:0, instance:com.DriverDetails.TC001_Get_List_Users@6ee52dcd]">getList_Users</td> 
-  <td>main@140799417</td>   <td></td> </tr>
-<tr bgcolor="6796d9">  <td>20/05/20 17:01:40</td>   <td>-6109</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.DriverDetails.TC001_Get_List_Users@6ee52dcd]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@140799417</td>   <td></td> </tr>
-<tr bgcolor="c273d3">  <td>20/05/20 17:01:46</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC001_Get_List_Users.tearDown(org.testng.ITestResult)[pri:0, instance:com.DriverDetails.TC001_Get_List_Users@6ee52dcd]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@140799417</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/07/28 19:30:59</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TC001_Get_Notification_Users.endReport()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239372207</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/07/28 19:30:47</td>   <td>-12124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Get_Notification_Users.getList_Users()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">getList_Users</td> 
+  <td>main@239372207</td>   <td></td> </tr>
+<tr bgcolor="aeed8f">  <td>20/07/28 19:30:59</td>   <td>-361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Post_Notification_Users.post_New_Users()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">post_New_Users</td> 
+  <td>main@239372207</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/07/28 19:30:59</td>   <td>-128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003_PATCH_Notification_Users.put_New_Users()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">put_New_Users</td> 
+  <td>main@239372207</td>   <td></td> </tr>
+<tr bgcolor="aaf0a4">  <td>20/07/28 19:30:46</td>   <td>-12746</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239372207</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/07/28 19:30:59</td>   <td>-367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC001_Get_Notification_Users.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@239372207</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/07/28 19:30:59</td>   <td>-131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC001_Get_Notification_Users.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@239372207</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/07/28 19:30:59</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC001_Get_Notification_Users.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@239372207</td>   <td></td> </tr>
 </table>
