Driver Registeration Test Cases CHnages

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,22 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.NotificationDetails.TC001_Get_Notification_Users</td>
+<td>com.DriverProfile.TC002_Post_DriverVerify</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>put_New_Users</td>
+<td>post_drierVerify_Invalid_UNM_PWD</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>post_New_Users</td>
+<td>post_drierVerify_Valid_UNM_PWD</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getList_Users</td>
+<td>post_drierVerify_EmptyData</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
