--- a/test-output/old/USERS_API Suite/methods-alphabetical.html
+++ b/test-output/old/USERS_API Suite/methods-alphabetical.html
@@ -1,28 +1,60 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>USERS_API Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a2b467">  <td>20/08/04 16:35:20</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TC001_Get_Notification_Users.endReport()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@210156003</td>   <td></td> </tr>
-<tr bgcolor="bc63a3">  <td>20/08/04 16:35:20</td>   <td>319</td> <td>&nbsp;</td><td title="&lt;&lt;TC002_Post_Notification_Users.endReport()[pri:0, instance:com.NotificationDetails.TC002_Post_Notification_Users@6c40365c]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@210156003</td>   <td></td> </tr>
-<tr bgcolor="86b7cc">  <td>20/08/04 16:35:20</td>   <td>424</td> <td>&nbsp;</td><td title="&lt;&lt;TC003_PUT_Notification_Users.endReport()[pri:0, instance:com.NotificationDetails.TC003_PUT_Notification_Users@7bedc48a]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@210156003</td>   <td></td> </tr>
-<tr bgcolor="a2b467">  <td>20/08/04 16:35:14</td>   <td>-6031</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Get_Notification_Users.getList_Users()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">getList_Users</td> 
-  <td>main@210156003</td>   <td></td> </tr>
-<tr bgcolor="bc63a3">  <td>20/08/04 16:35:19</td>   <td>-151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Post_Notification_Users.post_New_Users()[pri:0, instance:com.NotificationDetails.TC002_Post_Notification_Users@6c40365c]">post_New_Users</td> 
-  <td>main@210156003</td>   <td></td> </tr>
-<tr bgcolor="86b7cc">  <td>20/08/04 16:35:20</td>   <td>-55</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003_PUT_Notification_Users.put_New_Users()[pri:0, instance:com.NotificationDetails.TC003_PUT_Notification_Users@7bedc48a]">put_New_Users</td> 
-  <td>main@210156003</td>   <td></td> </tr>
-<tr bgcolor="a3e471">  <td>20/08/04 16:35:13</td>   <td>-6158</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@210156003</td>   <td></td> </tr>
-<tr bgcolor="a3e471">  <td>20/08/04 16:35:19</td>   <td>-157</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.NotificationDetails.TC002_Post_Notification_Users@6c40365c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@210156003</td>   <td></td> </tr>
-<tr bgcolor="a3e471">  <td>20/08/04 16:35:20</td>   <td>-61</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.NotificationDetails.TC003_PUT_Notification_Users@7bedc48a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@210156003</td>   <td></td> </tr>
-<tr bgcolor="a2b467">  <td>20/08/04 16:35:19</td>   <td>-160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC001_Get_Notification_Users.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@210156003</td>   <td></td> </tr>
-<tr bgcolor="bc63a3">  <td>20/08/04 16:35:20</td>   <td>-61</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC002_Post_Notification_Users.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC002_Post_Notification_Users@6c40365c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@210156003</td>   <td></td> </tr>
-<tr bgcolor="86b7cc">  <td>20/08/04 16:35:20</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003_PUT_Notification_Users.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC003_PUT_Notification_Users@7bedc48a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@210156003</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>20/08/11 11:23:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC004_Get_One_Notification_Details.callNotificationAPI()[pri:0, instance:com.NotificationDetails.TC004_Get_One_Notification_Details@37ceb1df]">callNotificationAPI</td> 
+  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>20/08/11 11:24:01</td>   <td>6186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC005_Delete_Notification_Details.callNotificationAPI()[pri:0, instance:com.NotificationDetails.TC005_Delete_Notification_Details@7c9d8e2]">callNotificationAPI</td> 
+  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/08/11 11:24:07</td>   <td>12883</td> <td>&nbsp;</td><td title="&lt;&lt;TC001_Get_Notification_Users.endReport()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@2df3b89c]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>20/08/11 11:24:08</td>   <td>13356</td> <td>&nbsp;</td><td title="&lt;&lt;TC001_Post_DriverRegistration.endReport()[pri:0, instance:com.DriverProfile.TC001_Post_DriverRegistration@20d525]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>20/08/11 11:24:08</td>   <td>13461</td> <td>&nbsp;</td><td title="&lt;&lt;TC002_Post_Notification_Users.endReport()[pri:0, instance:com.NotificationDetails.TC002_Post_Notification_Users@23348b5d]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="f5e5e3">  <td>20/08/11 11:24:08</td>   <td>13582</td> <td>&nbsp;</td><td title="&lt;&lt;TC003_PUT_Notification_Users.endReport()[pri:0, instance:com.NotificationDetails.TC003_PUT_Notification_Users@70325e14]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>20/08/11 11:24:08</td>   <td>13696</td> <td>&nbsp;</td><td title="&lt;&lt;TC004_Get_One_Notification_Details.endReport()[pri:0, instance:com.NotificationDetails.TC004_Get_One_Notification_Details@37ceb1df]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>20/08/11 11:24:08</td>   <td>13819</td> <td>&nbsp;</td><td title="&lt;&lt;TC005_Delete_Notification_Details.endReport()[pri:0, instance:com.NotificationDetails.TC005_Delete_Notification_Details@7c9d8e2]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/08/11 11:23:45</td>   <td>-9104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Get_Notification_Users.getList_Users()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@2df3b89c]">getList_Users</td> 
+  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>20/08/11 11:23:54</td>   <td>-290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Post_Notification_Users.post_New_Users()[pri:0, instance:com.NotificationDetails.TC002_Post_Notification_Users@23348b5d]">post_New_Users</td> 
+  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>20/08/11 11:24:07</td>   <td>12334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Post_DriverRegistration.post_New_Users()[pri:0, instance:com.DriverProfile.TC001_Post_DriverRegistration@20d525]">post_New_Users</td> 
+  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="f5e5e3">  <td>20/08/11 11:23:54</td>   <td>-81</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003_PUT_Notification_Users.put_New_Users()[pri:0, instance:com.NotificationDetails.TC003_PUT_Notification_Users@70325e14]">put_New_Users</td> 
+  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>20/08/11 11:23:58</td>   <td>3085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC004_Get_One_Notification_Details.retrieveNotificationDetails()[pri:0, instance:com.NotificationDetails.TC004_Get_One_Notification_Details@37ceb1df]">retrieveNotificationDetails</td> 
+  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>20/08/11 11:24:04</td>   <td>9245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC005_Delete_Notification_Details.retrieveNotificationDetails()[pri:0, instance:com.NotificationDetails.TC005_Delete_Notification_Details@7c9d8e2]">retrieveNotificationDetails</td> 
+  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="ee9faa">  <td>20/08/11 11:23:45</td>   <td>-9314</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@2df3b89c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="ee9faa">  <td>20/08/11 11:23:54</td>   <td>-296</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.NotificationDetails.TC002_Post_Notification_Users@23348b5d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="ee9faa">  <td>20/08/11 11:23:54</td>   <td>-87</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.NotificationDetails.TC003_PUT_Notification_Users@70325e14]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="ee9faa">  <td>20/08/11 11:23:54</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.NotificationDetails.TC004_Get_One_Notification_Details@37ceb1df]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="ee9faa">  <td>20/08/11 11:24:01</td>   <td>6177</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.NotificationDetails.TC005_Delete_Notification_Details@7c9d8e2]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="ee9faa">  <td>20/08/11 11:24:07</td>   <td>12329</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.DriverProfile.TC001_Post_DriverRegistration@20d525]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/08/11 11:23:54</td>   <td>-306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC001_Get_Notification_Users.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@2df3b89c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>20/08/11 11:23:54</td>   <td>-88</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC002_Post_Notification_Users.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC002_Post_Notification_Users@23348b5d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="f5e5e3">  <td>20/08/11 11:23:54</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003_PUT_Notification_Users.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC003_PUT_Notification_Users@70325e14]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>20/08/11 11:23:58</td>   <td>3084</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC004_Get_One_Notification_Details.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC004_Get_One_Notification_Details@37ceb1df]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>20/08/11 11:24:01</td>   <td>6175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC004_Get_One_Notification_Details.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC004_Get_One_Notification_Details@37ceb1df]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>20/08/11 11:24:04</td>   <td>9244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC005_Delete_Notification_Details.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC005_Delete_Notification_Details@7c9d8e2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>20/08/11 11:24:07</td>   <td>12328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC005_Delete_Notification_Details.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC005_Delete_Notification_Details@7c9d8e2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>20/08/11 11:24:07</td>   <td>12882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC001_Post_DriverRegistration.tearDown(org.testng.ITestResult)[pri:0, instance:com.DriverProfile.TC001_Post_DriverRegistration@20d525]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1312381159</td>   <td></td> </tr>
 </table>
