--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6fc185">  <td>20/08/04 16:25:33</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TC001_Get_Notification_Users.endReport()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239372207</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>20/08/04 16:25:28</td>   <td>-5337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Get_Notification_Users.getList_Users()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">getList_Users</td> 
-  <td>main@239372207</td>   <td></td> </tr>
-<tr bgcolor="aeed8f">  <td>20/08/04 16:25:33</td>   <td>-162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Post_Notification_Users.post_New_Users()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">post_New_Users</td> 
-  <td>main@239372207</td>   <td></td> </tr>
-<tr bgcolor="7fa893">  <td>20/08/04 16:25:33</td>   <td>-65</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003_PUT_Notification_Users.put_New_Users()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">put_New_Users</td> 
-  <td>main@239372207</td>   <td></td> </tr>
-<tr bgcolor="aaf0a4">  <td>20/08/04 16:25:28</td>   <td>-5469</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239372207</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>20/08/04 16:25:33</td>   <td>-165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC001_Get_Notification_Users.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@239372207</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>20/08/04 16:25:33</td>   <td>-66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC001_Get_Notification_Users.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@239372207</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>20/08/04 16:25:33</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC001_Get_Notification_Users.tearDown(org.testng.ITestResult)[pri:0, instance:com.NotificationDetails.TC001_Get_Notification_Users@41a2befb]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@239372207</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/08/11 18:41:25</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TC002_Post_DriverVerify.endReport()[pri:0, instance:com.DriverProfile.TC002_Post_DriverVerify@544fa968]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1444635922</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/08/11 18:41:20</td>   <td>-5037</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Post_DriverVerify.post_drierVerify_EmptyData()[pri:0, instance:com.DriverProfile.TC002_Post_DriverVerify@544fa968]">post_drierVerify_EmptyData</td> 
+  <td>main@1444635922</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/08/11 18:41:23</td>   <td>-1728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Post_DriverVerify.post_drierVerify_Invalid_UNM_PWD()[pri:1, instance:com.DriverProfile.TC002_Post_DriverVerify@544fa968]">post_drierVerify_Invalid_UNM_PWD</td> 
+  <td>main@1444635922</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/08/11 18:41:23</td>   <td>-1654</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Post_DriverVerify.post_drierVerify_Valid_UNM_PWD()[pri:2, instance:com.DriverProfile.TC002_Post_DriverVerify@544fa968]">post_drierVerify_Valid_UNM_PWD</td> 
+  <td>main@1444635922</td>   <td></td> </tr>
+<tr bgcolor="bca669">  <td>20/08/11 18:41:20</td>   <td>-5201</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.DriverProfile.TC002_Post_DriverVerify@544fa968]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1444635922</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/08/11 18:41:23</td>   <td>-1744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC002_Post_DriverVerify.tearDown(org.testng.ITestResult)[pri:0, instance:com.DriverProfile.TC002_Post_DriverVerify@544fa968]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1444635922</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/08/11 18:41:23</td>   <td>-1658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC002_Post_DriverVerify.tearDown(org.testng.ITestResult)[pri:0, instance:com.DriverProfile.TC002_Post_DriverVerify@544fa968]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1444635922</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/08/11 18:41:25</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC002_Post_DriverVerify.tearDown(org.testng.ITestResult)[pri:0, instance:com.DriverProfile.TC002_Post_DriverVerify@544fa968]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1444635922</td>   <td></td> </tr>
 </table>
