Get Driver Test cases updated

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\PbBhosale\AppData\Local\Temp\testng-eclipse-1476867152\testng-customsuite.xml</span>
+                    <span>C:\Users\PbBhosale\AppData\Local\Temp\testng-eclipse-688367617\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,17 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.DriverProfile.TC002_Post_DriverVerify" hash-for-method="post_drierVerify_EmptyData">post_drierVerify_EmptyData</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.DriverProfile.TC002_Post_DriverVerify" hash-for-method="post_drierVerify_Invalid_UNM_PWD">post_drierVerify_Invalid_UNM_PWD</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.DriverProfile.TC002_Post_DriverVerify" hash-for-method="post_drierVerify_Valid_UNM_PWD">post_drierVerify_Valid_UNM_PWD</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Serilization_DriverDetails.DriverObject" hash-for-method="verify_Message">verify_Message</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,28 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.DriverProfile.TC002_Post_DriverVerify</span>
+              <span class="class-name">Serilization_DriverDetails.DriverObject</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="post_drierVerify_EmptyData">
-                  </a> <!-- post_drierVerify_EmptyData -->
-                  <span class="method-name">post_drierVerify_EmptyData</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="post_drierVerify_Invalid_UNM_PWD">
-                  </a> <!-- post_drierVerify_Invalid_UNM_PWD -->
-                  <span class="method-name">post_drierVerify_Invalid_UNM_PWD</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="post_drierVerify_Valid_UNM_PWD">
-                  </a> <!-- post_drierVerify_Valid_UNM_PWD -->
-                  <span class="method-name">post_drierVerify_Valid_UNM_PWD</span>
+                  <a name="verify_Message">
+                  </a> <!-- verify_Message -->
+                  <span class="method-name">verify_Message</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -159,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PbBhosale\AppData\Local\Temp\testng-eclipse-1476867152\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PbBhosale\AppData\Local\Temp\testng-eclipse-688367617\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.DriverProfile.TC002_Post_DriverVerify&quot;/&gt;
+      &lt;class name=&quot;Serilization_DriverDetails.DriverObject&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -208,24 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'post_drierVerify_EmptyData')
-data.setCell(0, 2, 'com.DriverProfile.TC002_Post_DriverVerify')
-data.setCell(0, 3, 3289);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'post_drierVerify_Valid_UNM_PWD')
-data.setCell(1, 2, 'com.DriverProfile.TC002_Post_DriverVerify')
-data.setCell(1, 3, 1646);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'post_drierVerify_Invalid_UNM_PWD')
-data.setCell(2, 2, 'com.DriverProfile.TC002_Post_DriverVerify')
-data.setCell(2, 3, 68);
+data.setCell(0, 1, 'verify_Message')
+data.setCell(0, 2, 'Serilization_DriverDetails.DriverObject')
+data.setCell(0, 3, 6244);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -251,39 +219,15 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.DriverProfile.TC002_Post_DriverVerify</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Serilization_DriverDetails.DriverObject</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">post_drierVerify_EmptyData</span>
-                <span class="method-start">168 ms</span>
+                <span class="method-name">verify_Message</span>
+                <span class="method-start">140 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown([TestResult name=post_drierVerify_EmptyData status=SUCCESS method=TC002_Post_DriverVerify.post_drier...)</span>
-                <span class="method-start">3460 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">post_drierVerify_Invalid_UNM_PWD</span>
-                <span class="method-start">3477 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown([TestResult name=post_drierVerify_Invalid_UNM_PWD status=SUCCESS method=TC002_Post_DriverVerify.post...)</span>
-                <span class="method-start">3547 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">post_drierVerify_Valid_UNM_PWD</span>
-                <span class="method-start">3551 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown([TestResult name=post_drierVerify_Valid_UNM_PWD status=SUCCESS method=TC002_Post_DriverVerify.post_d...)</span>
-                <span class="method-start">5200 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-test after">
-                <span class="method-name">endReport</span>
-                <span class="method-start">5205 ms</span>
-              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
