Rest Assured_API Automation Code

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6fc185">  <td>20/08/18 20:17:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Post_PassengerRegisteration.post_PassengerRegi_EmptyData()[pri:0, instance:com.PassengerProfile.TC001_Post_PassengerRegisteration@4c178a76]">post_PassengerRegi_EmptyData</td> 
-  <td>main@422330142</td>   <td></td> </tr>
-<tr bgcolor="939fd1">  <td>20/08/18 20:17:53</td>   <td>-288</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.PassengerProfile.TC001_Post_PassengerRegisteration@4c178a76]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/12/30 20:30:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003_GetDriverID.post_drierVerify_Valid_UNM_PWD()[pri:0, instance:com.DriverProfile.TC003_GetDriverID@70325e14]">post_drierVerify_Valid_UNM_PWD</td> 
+  <td>main@940584193</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/12/30 20:30:51</td>   <td>-361</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.DriverProfile.TC003_GetDriverID@70325e14]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@940584193</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/12/30 20:31:00</td>   <td>8442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003_GetDriverID.tearDown(org.testng.ITestResult)[pri:0, instance:com.DriverProfile.TC003_GetDriverID@70325e14]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@940584193</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/12/30 20:31:00</td>   <td>8452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003_GetDriverID.verify_GetReqByDriverID()[pri:1, instance:com.DriverProfile.TC003_GetDriverID@70325e14]">verify_GetReqByDriverID</td> 
+  <td>main@940584193</td>   <td></td> </tr>
 </table>
